--- a/style.css
+++ b/style.css
@@ -1,3 +1,64 @@
-body{
+.container{
      background-image: url(./images/gold-cymbals-164967.jpg);
+     background-size: cover;
+     color:white;
+     font-family: gotham;
+     letter-spacing: 5px;
+     text-align: center;
+     font-size: 40px;
+}
+
+.allKeys{
+     display:flex;
+     justify-content: center;
+     align-items: center;
+     margin-top:100px;
+}
+.key{
+     width:100px;
+     margin-left: 10px;
+     height: 100px;
+     font-size: 20px;
+     border: 1px solid white;
+     border-radius: 10px;
+     overflow: hidden;
+     padding:10px;
+     color:white;
+     transition: all 0.07s;
+     text-align: center;
+     box-shadow: 2px 2px 10px 1px white;
+     display: flex;
+     text-transform: uppercase;
+     font-family: gotham;
+     flex-direction: column;
+     background-color: rgba(0,0,0,0.4);
+}
+.key:nth-child(1){
+     margin-left: 0px;
+}
+.key kbd{
+     font-size: 50px;
+}
+.playing{
+     transform: scale(1.1);
+     border:2px solid yellow;
+     box-shadow: 2px 2px 10px 1px yellow;
+}
+
+p{
+     border: 1px solid white;
+     text-align: center;
+     width: 700px;
+     margin:0px auto;
+     margin-top: 50px;
+     border-radius: 10px;
+     background-color:rgba(0,0,0,0.4);
+     padding:10px;
+     transition: 0.2s ease-in-out;
+     box-shadow: 1px 1px 10px 1px white;
+}
+p:hover{
+     transform: scale(1.1);
+     border: 1px solid yellow;
+     box-shadow: 1px 1px 10px 1px yellow;
 }
