--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+     user-select: none;
+}
 .container{
      background-image: url(./images/gold-cymbals-164967.jpg);
      background-size: cover;
@@ -39,6 +42,9 @@
 .key kbd{
      font-size: 50px;
 }
+.key:hover{
+     background-color:rgba(255,255,255,0.2);
+}
 .playing{
      transform: scale(1.1);
      border:2px solid yellow;
@@ -59,6 +65,8 @@ p{
 }
 p:hover{
      transform: scale(1.1);
+     /* background-color:rgba(255,255,255,0.2); */
      border: 1px solid yellow;
      box-shadow: 1px 1px 10px 1px yellow;
 }    
+
